--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -159,3 +159,10 @@
 		{text: 'Figma', percent: '70'},
 		{text: 'Illustrator', percent: '75'}
 	];
+
+	let VERTICAL_PROJECTS = [
+		{title: '<span>Nike</span> <span>Sneakers</span> <span>Photo</span>', category: '', image: '1'},
+		{title: '<span>Mate</span> <span>Bottle</span> <span>Branding</span>', category: 'Design', image: '2'},
+		{title: '<span>Balanced</span> <span>Color</span> <span>Scheme</span>', category: 'Photography', image: '3'},
+		{title: '<span>Sony</span> <span>Headphones</span>', category: 'Product design', image: '4'}
+	]
