--- a/source/scss/blocks/webpage.scss
+++ b/source/scss/blocks/webpage.scss
@@ -15,4 +15,15 @@
 			}
 		}
 	}
+	/*
+	&::before {
+		content: "";
+		position: fixed;
+		z-index: 3;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		width: 50px;
+		background-color: rgba(red, 0.5);
+	}*/
 }
