--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -91,6 +91,9 @@
 /* Project preview card in carousel */
 @import "blocks/project-preview";
 
+/* Project card in listing */
+@import "blocks/project-card";
+
 /* Team member card */
 @import "blocks/member-card";
 
@@ -162,6 +165,9 @@
 
 /* Vcard page  */
 @import "blocks/vcard";
+
+/* Projects listing */
+@import "blocks/projects-listing";
 
 /* 2.2 Header */
 @import "blocks/header";
