pricing, service-detail, faq, contact

--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -25,7 +25,7 @@
 		pages: {
 			about: 'about-us.html',
 			services: 'services.html',
-			serviceDetail: 'single-services.html',
+			serviceDetail: 'service-detail.html',
 			team: 'team.html',
 			faq: 'faq.html',
 			pricing: 'pricing.html',
@@ -102,7 +102,7 @@
 			submenu: [
 				{name: 'About us', url: URLS.pages.about, currentSection: 2, currentPage: 2.01},
 				{name: 'Services', url: URLS.pages.services, currentSection: 2, currentPage: 2.02},
-				{name: 'Service detail', url: URLS.pages.detail, currentSection: 2, currentPage: 2.03},
+				{name: 'Service detail', url: URLS.pages.serviceDetail, currentSection: 2, currentPage: 2.03},
 				{name: 'Team', url: URLS.pages.team, currentSection: 2, currentPage: 2.04},
 				{name: 'Faq', url: URLS.pages.faq, currentSection: 2, currentPage: 2.05},
 				{name: 'Pricing', url: URLS.pages.pricing, currentSection: 2, currentPage: 2.06},
