--- a/source/scss/blocks/accordion.scss
+++ b/source/scss/blocks/accordion.scss
@@ -1,4 +1,6 @@
 .accordion {
+	$self: &;
+
 	&__header {
 	}
 
@@ -103,6 +105,55 @@
 				justify-content: space-between;
 
 				padding-left: 54px;
+			}
+		}
+	}
+
+	&--black {
+		#{$self} {
+			&__item {
+				border-top: 0;
+				border-bottom: solid 1px $color-default-black;
+
+				&-title,
+				&-short,
+				&-text {
+					color: $color-default-black;
+				}
+
+				&-title {
+					font-family: $font-family--main;
+
+					span {
+						display: inline-block;
+						width: 44px;
+					}
+				}
+
+				&-text {
+					max-width: 568px;
+					margin-top: 0;
+
+					@include media(lg) {
+						padding-left: 50px;
+					}
+				}
+
+				&-header {
+					&::before {
+						background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='10' viewBox='0 0 18 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cline y1='-0.5' x2='12.0148' y2='-0.5' transform='matrix(-0.687305 0.726368 -0.687306 -0.726368 17 0.000488281)' stroke='black'/%3e%3cline y1='-0.5' x2='12.0148' y2='-0.5' transform='matrix(-0.687306 -0.726368 0.687305 -0.726368 9.25732 8.72729)' stroke='black'/%3e%3c/svg%3e");
+					}
+
+					&--opened {
+						&::before {
+							background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='10' viewBox='0 0 18 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cline y1='-0.5' x2='12.0148' y2='-0.5' transform='matrix(0.687306 -0.726368 0.687306 0.726368 1 9.72729)' stroke='black'/%3e%3cline y1='-0.5' x2='12.0148' y2='-0.5' transform='matrix(0.687306 0.726368 -0.687306 0.726368 8.74268 1)' stroke='black'/%3e%3c/svg%3e");
+						}
+					}
+				}
+
+				&-body {
+					padding-bottom: 48px;
+				}
 			}
 		}
 	}
