--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -169,6 +169,12 @@
 /* Projects listing */
 @import "blocks/projects-listing";
 
+/* Portfolio section */
+@import "blocks/portfolio-section";
+
+/* Services section */
+@import "blocks/services-section";
+
 /* 2.2 Header */
 @import "blocks/header";
 
