--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -165,4 +165,24 @@
 		{title: '<span>Mate</span> <span>Bottle</span> <span>Branding</span>', category: 'Design', image: '2'},
 		{title: '<span>Balanced</span> <span>Color</span> <span>Scheme</span>', category: 'Photography', image: '3'},
 		{title: '<span>Sony</span> <span>Headphones</span>', category: 'Product design', image: '4'}
+	];
+
+	let PORTFOLIO_CARDS = [
+		{title: 'Realistic building', cl: 'col-12 col-md-6 col-lg-4', image: {url: '1', w: '535', h: '1013'}},
+		{title: 'Banana', cl: 'col-12 col-md-6 col-lg-4', image: {url: '2', w: '531', h: '417'}},
+		{title: 'Abstract lists', cl: 'col-12 col-md-6 col-lg-4', image: {url: '3', w: '531', h: '417'}},
+		{title: 'Green onion', cl2: '--two-thirds', cl: 'col-12 col-lg-8', image: {url: '4', w: '1122', h: '494'}},
+		{title: 'Banana', cl: 'col-12 col-md-6 col-lg-4', image: {url: '5', w: '536', h: '417'}},
+		{title: 'Abstract lists', cl: 'col-12 col-md-6 col-lg-4', image: {url: '6', w: '531', h: '417'}},
+		{title: 'Realistic building', cl: 'col-12 col-md-6 col-lg-4', image: {url: '7', w: '533', h: '1013'}},
+		{title: 'Green onion', cl2: '--two-thirds', cl: 'col-12 col-lg-8', image: {url: '8', w: '1125', h: '494'}}
+	];
+
+	let SERVICES_LIST = [
+		'Web development',
+		'Marketing',
+		'Graphic design',
+		'Photography',
+		'Illustrations',
+		'Product design'
 	]
