--- a/source/scss/blocks/project-preview.scss
+++ b/source/scss/blocks/project-preview.scss
@@ -1,6 +1,17 @@
 .project-preview {
 	$self: &;
+	display: inline-block;
 	overflow: hidden;
+
+	&--elastic {
+		display: block;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 
 	img {
 		display: block;
