--- a/source/pug/creative-agency.pug
+++ b/source/pug/creative-agency.pug
@@ -16,6 +16,7 @@ block content
 	include modules/creative-hero
 	include modules/portfolio-section
 	include modules/services-section
+	include modules/plans-section
 	include modules/start-project--creative-page
 
 block footer
