--- a/source/pug/modules/creative-hero.pug
+++ b/source/pug/modules/creative-hero.pug
@@ -1,7 +1,8 @@
 section.creative-hero
 	.creative-hero__container.container-fluid
+
 		.creative-hero__main
-			h1.creative-hero__title Undertake projects of any complexity
+			h1.creative-hero__title Undertake projects of&nbsp;any complexity
 			+btn(false, 'Join now', url = '#', cl = 'creative-hero__btn')
 		.creative-hero__image
 			picture
