--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -130,6 +130,9 @@
 /* 2.2 Hero section in modern homepage */
 @import "blocks/modern-hero";
 
+/* 2.2 Hero section in creative homepage */
+@import "blocks/creative-hero";
+
 /* 2.2 Features section in homepage */
 @import "blocks/features";
 
@@ -174,6 +177,9 @@
 
 /* Services section */
 @import "blocks/services-section";
+
+/* Plans section in creative homepage */
+@import "blocks/plans-section";
 
 /* 2.2 Header */
 @import "blocks/header";
