--- a/source/pug/modules/services-section.pug
+++ b/source/pug/modules/services-section.pug
@@ -8,7 +8,7 @@ section.services-section
 					source(type="image/webp", srcset="img/picture/creative/services.webp 1x, img/picture/creative/services@2x.webp 2x")
 					img(src="img/picture/creative/services.jpg", srcset="img/picture/creative/services@2x.jpg 2x", width="823", height="417", alt="")
 
-			.services-section__aside
+			.services-section__menu
 				ul.services-section__list
 					each item in SERVICES_LIST
 						li.services-section__item
