--- a/source/pug/modules/portfolio-section.pug
+++ b/source/pug/modules/portfolio-section.pug
@@ -1,4 +1,4 @@
-section.portfolio-section
+section.portfolio-section.portfolio-section--no-padding
 	.portfolio-section__container.container-fluid
 		header.portfolio-section__header.row.align-items-end
 			.col-8.col-xl-6.offset-xl-2
