--- a/source/scss/blocks/portfolio-section.scss
+++ b/source/scss/blocks/portfolio-section.scss
@@ -1,6 +1,14 @@
 .portfolio-section {
 	overflow: hidden;
 
+	padding-top: 100px;
+	padding-bottom: 100px;
+
+	&--no-padding {
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+
 	&__container {
 		max-width: $width--full;
 		margin: 0 auto;
@@ -72,5 +80,9 @@
 				width: calc(66.66% - 60px);
 			}
 		}
+	}
+
+	&__more {
+		margin: 55px auto 0;
 	}
 }
