--- a/source/scss/common/global.scss
+++ b/source/scss/common/global.scss
@@ -68,7 +68,7 @@ body {
 	-webkit-locale: auto;
 	white-space: normal;
 
-	background-color: $color-smoky;
+	//background-color: $color-smoky;
 }
 
 .container,
@@ -88,6 +88,13 @@ body {
 		@include media(xxl) {
 			max-width: 760px;
 		}
+	}
+}
+
+[class*="col-"] {
+	@include media(xxl) {
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 }
 
