--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -181,6 +181,9 @@
 /* Plans section in creative homepage */
 @import "blocks/plans-section";
 
+/* Grid in team page */
+@import "blocks/team";
+
 /* 2.2 Header */
 @import "blocks/header";
 
