--- a/source/scss/utils/variables.scss
+++ b/source/scss/utils/variables.scss
@@ -12,7 +12,6 @@ $color-dark: #212121;
 $color-dark-0a: #0a0a0a;
 $color-dark-26: #262626;
 $color-smoky: #f7f7f7;
-//$color-smoky3: #fbfaf6;
 
 $color-yellow: #fffe55;
 
@@ -20,6 +19,7 @@ $color-yellow-hover: darken($color-yellow, 10%);
 
 $color-grey: #787878;
 $color-grey-d3: #d3d3d3;
+$color-grey-e5: #e5e5e5;
 $color-grey-76: #767676;
 $color-grey-ab: #ababab;
 
