--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -153,6 +153,16 @@
 		{name: 'Amanda James', post: 'Programmer', image: {url: '4', w: '326', h: '548'}}
 	];
 
+	let MEMBERS_CARDS_2 = [
+		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--first', bootstrapCl: 'col-lg-5', image: {url: '3', w: '474', h: '450'}},
+		{name: 'Sam Flex', post: 'Director', image: {url: '1', w: '385', h: '548'}},
+		{name: 'Kate Larson', post: 'Manager', image: {url: '2', w: '355', h: '241'}},
+		{name: 'Amanda James', post: 'Programmer', image: {url: '5', w: '326', h: '548'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--margin-negative',  bootstrapCl: 'offset-lg-4', image: {url: '4-1', w: '355', h: '548'}},
+		{name: 'Amanda James', post: 'Programmer', addCl: 'team__item--left-shift', bootstrapCl: 'col-lg-6 align-self-lg-end', image: {url: '6', w: '355', h: '281'}},
+		{name: 'Bobby Fish', post: 'Designer', addCl: 'team__item--left-small-shift', bootstrapCl: 'col-lg-5 offset-lg-1', image: {url: '7', w: '474', h: '450'}}
+	];
+
 	let SKILLS = [
 		{text: 'Photoshop', percent: '80'},
 		{text: 'WordPress', percent: '90'},
