--- a/source/scss/blocks/member-card.scss
+++ b/source/scss/blocks/member-card.scss
@@ -20,8 +20,34 @@
 		}
 	}
 
+	&--elastic {
+		display: block;
+
+		@include media(lg) {
+			display: inline-block;
+		}
+
+		#{$self}__image {
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+
+				@include media(lg) {
+					display: inline-block;
+					max-width: 100%;
+					width: auto;
+					height: auto;
+					object-fit: none;
+				}
+			}
+		}
+	}
+
 	&__image {
 		overflow: hidden;
+
 		@include media(sm) {
 			height: 300px;
 		}
