--- a/source/pug/modules/tooltip--black.pug
+++ b/source/pug/modules/tooltip--black.pug
@@ -1,4 +1,4 @@
-section.tooltip
+section.tooltip.tooltip--theme-dark
 	.tooltip__container.container-fluid
 		a.tooltip__btn.round-button(href="#")
 			span.round-button__circle
