--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -117,7 +117,7 @@
 			submenu: [
 				{name: 'Masonry', url: URLS.projects.masonry, currentSection: 3, currentPage: 3.01},
 				{name: 'Carousel', url: URLS.projects.carousel, currentSection: 3, currentPage: 3.02},
-				{name: 'Tooltips', url: URLS.projects.tooltips, currentSection: 3, currentPage: 3.06},
+				{name: 'Tooltips', url: URLS.projects.tooltip2, currentSection: 3, currentPage: 3.06},
 				{name: 'Single project', url: URLS.projects.single, currentSection: 3, currentPage: 3.03}
 			]
 		}, {
@@ -195,4 +195,4 @@
 		'Photography',
 		'Illustrations',
 		'Product design'
-	]
+	];
