--- a/source/pug/tooltip-projects.pug
+++ b/source/pug/tooltip-projects.pug
@@ -10,7 +10,7 @@ block header
 	include modules/header
 
 block content
-	include modules/tooltip
+	include modules/tooltip--black
 
 block footer
 	include modules/footer
