--- a/source/pug/templates/_vars.pug
+++ b/source/pug/templates/_vars.pug
@@ -196,3 +196,10 @@
 		'Illustrations',
 		'Product design'
 	];
+
+	let SERVICES_CARDS = [
+		{text: 'Photography <br>& Illustration', addCl: 'services__item--first', bootstrapCl: 'col-12 col-sm-6 col-lg-5 col-xl-6', image: {url: '1', w: '810', h: '783'}},
+		{text: 'Mobile <br>apps design', addCl: 'services__item--margin-negative', bootstrapCl: 'col-12 col-sm-6 col-lg-4', image: {url: '2', w: '410', h: '490'}},
+		{text: 'Web development', addCl: 'services__item--left-shift', bootstrapCl: 'col-12 col-sm-6 col-lg-8', image: {url: '3', w: '616', h: '496'}},
+		{text: 'Marketing', addCl: 'services__item--last', bootstrapCl: 'col-12 col-sm-6 col-lg-10 offset-lg-1', image: {url: '4', w: '1238', h: '527'}}
+	];
