--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -85,6 +85,9 @@
 /* Feature card */
 @import "blocks/feature-card";
 
+/* Service preview card */
+@import "blocks/service-preview";
+
 /* Carousel card */
 @import "blocks/carousel-card";
 
@@ -183,6 +186,9 @@
 
 /* Grid in team page */
 @import "blocks/team";
+
+/* Grid in services page */
+@import "blocks/services";
 
 /* 2.2 Header */
 @import "blocks/header";
