--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -232,8 +232,8 @@
 				bottom: 0;
 				left: 50%;
 				transform: translateX(-50%);
-				width: 100%;
-				max-width: $width--full - 24px;
+				width: calc(100% - 24px);
+				max-width: $width--full - 30px;
 				border-top: solid 1px $color-default-black;
 			}
 		}
