about us, projects carousel, single project

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -204,3 +204,7 @@
 @import "blocks/service-detail";
 @import "blocks/card-price";
 @import "blocks/pricing";
+@import "blocks/about-us";
+@import "blocks/projects-carousel";
+@import "blocks/meta";
+@import "blocks/single-project";
