--- a/source/pug/mixins/_first-banner.pug
+++ b/source/pug/mixins/_first-banner.pug
@@ -1,5 +1,5 @@
-mixin first-banner(title, pic)
-	.first-banner
+mixin first-banner(title, pic, className)
+	.first-banner(class=className)
 		.first-banner__image
 			img(src="img/" + pic + ".jpg", srcset="img/" + pic + "@2x.jpg 2x", alt="")
-		h1.heading.heading--size-large.blog-grid__title= title
+		h1.heading.heading--size-large.blog-grid__title!= title
