--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -228,4 +228,5 @@
 @import "blocks/about-us";
 @import "blocks/projects-carousel";
 @import "blocks/meta";
+@import "blocks/project-other";
 @import "blocks/single-project";
