--- a/source/scss/blocks/meta.scss
+++ b/source/scss/blocks/meta.scss
@@ -1,10 +1,35 @@
 .meta {
-	padding: 93px 0 80px;
+	padding: 20px 0;
+
+	@include media(lg) {
+		padding: 93px 0 80px;
+	}
+
+	&__image {
+		width: 100%;
+
+		@include media(lg) {
+			max-width: 545px;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 
 	&__info {
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-end;
+		max-width: 785px;
+		width: 100%;
+		margin-top: 20px;
+
+		@include media(lg) {
+			margin-top: 0;
+		}
 	}
 
 	&__info-item {
@@ -12,17 +37,30 @@
 		align-items: center;
 		justify-content: space-between;
 		align-self: flex-end;
-		max-width: 785px;
 		width: 100%;
-		padding: 10px 0;
+		padding: 25px 0;
 		border-bottom: 1px solid $color-default-black;
 
+		@include media(xxl) {
+			padding: 63px 0 31px;
+		}
+
 		span {
-			font-size: 20px;
-			line-height: 140%;
+			font-size: 16px;
+			line-height: 110%;
+			text-align: center;
+
+			@include media(xxl) {
+				font-size: 20px;
+				line-height: 140%;
+			}
 
 			&.num {
-				padding-right: 10px;
+				padding-right: 5px;
+
+				@include media(xxl) {
+					padding-right: 10px;
+				}
 			}
 		}
 	}
