--- a/source/scss/blocks/single-project.scss
+++ b/source/scss/blocks/single-project.scss
@@ -1,25 +1,40 @@
 .single-project {
 	&__container {
-		padding: 60px 15px 100px;
+		padding: 60px 15px;
+
+		@include media(lg) {
+			padding: 60px 15px 194px;
+		}
 	}
 
 	.projects-listing {
+		padding: 0 0 20px;
 
+		@include media(lg) {
+			padding: 100px 0 50px;
+		}
 	}
 
 	.project-card {
 		.arrow-link__icon {
-			margin: 85px 0 40px 0;
+			margin: 30px 0;
+
+			@include media(md) {
+				margin: 85px 0 40px 0;
+			}
 		}
 
 		&__main {
+			max-width: 550px;
+			height: 100%;
+			flex-direction: column;
 			justify-content: flex-start;
+			align-items: flex-start;
 		}
 
 		&__image {
 			display: flex;
 			justify-content: flex-end;
-			height: 747px;
 
 			@include hover {
 				img {
@@ -30,6 +45,116 @@
 
 		&__text {
 			margin-top: auto;
+		}
+	}
+
+	&__services {
+		padding: 60px 0;
+
+		@include media(lg) {
+			padding: 110px 0;
+		}
+
+		@include media(xxl) {
+			padding: 221px 0 254px;
+		}
+
+		.services-section {
+			&__main {
+				align-items: flex-end;
+			}
+
+			&__title {
+				margin-bottom: 25px;
+
+				@include media(lg) {
+					margin-bottom: 85px;
+				}
+			}
+
+			&__text {
+				@include media(xxl) {
+					padding-bottom: 161px;
+				}
+			}
+
+			&__image {
+				max-width: 250px;
+				margin: 0 auto;
+				text-align: left;
+				position: relative;
+				overflow: visible;
+
+				@include media(md) {
+					max-width: 459px;
+					margin: 0;
+				}
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+
+			&__right {
+				order: -1;
+				margin-bottom: 25px;
+
+				@include media(xxl) {
+					padding-left: 123px;
+					margin-bottom: 0;
+					order: 0;
+				}
+			}
+
+			&__menu {
+				right: -16%;
+				z-index: 1;
+
+				@include media(lg) {
+					right: -53.5%;
+				}
+			}
+		}
+	}
+
+	&__next {
+		text-align: right;
+		margin-top: 60px;
+
+		@include media(lg) {
+			margin-top: 100px;
+		}
+
+		a {
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+			font-size: 40px;
+			color: $color-default-black;
+			@include transition(color);
+
+			@include media(md) {
+				font-size: 70px;
+			}
+
+			@include media(lg) {
+				font-size: 100px;
+			}
+
+			@include hover {
+				color: $color-yellow;
+
+				svg {
+					fill: $color-yellow;
+				}
+			}
+
+			svg {
+				margin-left: 26px;
+				@include transition(fill);
+			}
 		}
 	}
 }
