--- a/source/pug/404-error.pug
+++ b/source/pug/404-error.pug
@@ -4,9 +4,10 @@ block variables
 	- let isHome = false; //- Если true то логотип не будет ссылкой
 	- let currentPage = 2.08; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 2; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
+	- let headerClasses = 'header--separator __js_fixed-header';
 
 block header
-	include modules/header-secondary
+	include modules/header
 
 block content
 	article.page-404
