--- a/source/pug/agency-default.pug
+++ b/source/pug/agency-default.pug
@@ -4,9 +4,11 @@ block variables
 	- let isHome = true; //- Если true то логотип не будет ссылкой
 	- let currentPage = 1.01; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 1; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
+	- let isSecondaryHeader = true;
+	- let headerClasses = 'header--absolute __js_fixed-header';
 
 block header
-	include modules/header-secondary
+	include modules/header
 
 block content
 	include modules/hero
