--- a/source/pug/agency-modern.pug
+++ b/source/pug/agency-modern.pug
@@ -4,9 +4,9 @@ block variables
 	- let isHome = true; //- Если true то логотип не будет ссылкой
 	- let currentPage = 1.03; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 1; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
-	- let headerClasses = 'header--absolute header--separator';
+	- let headerClasses = 'header--absolute header--separator header--bg-white __js_fixed-header';
 	- let socialModClass = 'social--hover-white';
-	- let navigationModClass = 'navigation--hover-white';
+	//- let navigationModClass = 'navigation--hover-white';
 
 block header
 	include modules/header
