--- a/source/pug/creative-agency.pug
+++ b/source/pug/creative-agency.pug
@@ -8,6 +8,7 @@ block variables
 	//- let socialModClass = '';
 	//- let navigationModClass = 'navigation--hover-white';
 	- let isLeftwardHeader = true;
+	- let bodyModClass = 'webpage--bg-white';
 
 block header
 	include modules/header
