--- a/source/pug/projects-masonry.pug
+++ b/source/pug/projects-masonry.pug
@@ -4,7 +4,7 @@ block variables
 	- let isHome = false; //- Если true то логотип не будет ссылкой
 	- let currentPage = 3.01; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 3; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
-	- let headerClasses = 'header--absolute';
+	- let headerClasses = 'header--absolute __js_fixed-header';
 	//- let socialModClass = '';
 	//- let navigationModClass = 'navigation--hover-white';
 	//- let isLeftwardHeader = true;
