--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -1,4 +1,8 @@
 /* ------------------------------------------------------------------------------
+	Template Name: Centrix
+  Description: Centrix - Personal CV/Resume HTML Template
+  Author: Paul
+  Author URI: http://themeforest.net/user/Paul_tf
 
   1. Global
 		1.1 General
