--- a/source/pug/agency-mono.pug
+++ b/source/pug/agency-mono.pug
@@ -4,7 +4,7 @@ block variables
 	- let isHome = true; //- Если true то логотип не будет ссылкой
 	- let currentPage = 1.02; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 1; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
-	- let headerClasses = 'header--absolute header--separator header--white';
+	- let headerClasses = 'header--absolute header--separator header--white __js_fixed-header';
 	- let socialModClass = 'social--white';
 
 block header
