--- a/source/pug/parallax-projects.pug
+++ b/source/pug/parallax-projects.pug
@@ -4,9 +4,10 @@ block variables
 	- let isHome = false; //- Если true то логотип не будет ссылкой
 	- let currentPage = 3.07; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 3; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
+	- let headerClasses = 'header--absolute header--white';
 
 block header
-	//include modules/header-secondary
+	include modules/header
 
 block content
 	article#pagepiling.parallax-projects
