--- a/source/pug/service-detail.pug
+++ b/source/pug/service-detail.pug
@@ -4,7 +4,7 @@ block variables
 	- let isHome = false; //- Если true то логотип не будет ссылкой
 	- let currentPage = 2.03; // Для каждой страницы уникален. Номер смотреть в файле pug/templates/_vars.pug в массивах с пунктами меню
 	- let currentSection = 2; // // Для каждой раздела уникален. Home -1, projects - 2, news - 3, pages - 4
-	- headerClasses = 'header--bg-white';
+	- let headerClasses = '__js_fixed-header';
 
 block header
 	include modules/header
